--- a/index.css
+++ b/index.css
@@ -7,7 +7,10 @@
     overflow: hidden;
    
   }
-  
+  #modelos{
+    transform: translateX(-0px) translateY(100px); 
+}
+
   .slide {
     display: none;
   }
